2005-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: set application name to "GIMP", the
	expanded acronym is in the comment already.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: fixed string.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpaspectpreview.c
	* libgimp/gimpzoompreview.c: added missing API docs.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: reverted changes to handling
	of string arrays to stay backward compatible (see bug #168290 and
	bug #317634).

	* plug-ins/script-fu/scripts/font-map.scm: reverted change that
	was done to adapt to above changes (see bug #308681).

2005-10-04  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c (gimp_brush_core_start): set
	core->jitter here for all brush-based paint tools.

	(gimp_brush_core_interpolate): cleanup.

	* app/paint/gimpbrushcore.h: removed trailing whitespace.

	* app/paint/gimpclone.c (gimp_clone_motion)
	* app/paint/gimppaintbrush.c (_gimp_paintbrush_motion): removed
	jitter stuff here.

2005-10-04  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: another optimization by Tobias Lenz.

2005-10-04  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: small optimization by Tobias Lenz.

2005-10-03  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppainttool.c (gimp_paint_tool_color_picked):
	fix compile warning by adding default: for unused enum values.

2005-10-03  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* gimp/app/paint/gimpbrushcore.c
	* gimp/app/paint/gimpbrushcore.h
	* gimp/app/paint/gimpclone.c
	* gimp/app/paint/gimppaintbrush.c
	* gimp/app/paint/gimppaintoptions.c
	* gimp/app/paint/gimppaintoptions.h
	* gimp/app/tools/gimppaintoptions-gui.c: Apply patch from
	Adrian Likins to add "jitter" to paint tools (bug #163049),
	with small fixes for coding style and default jitter set
	to 0.2 instead of 0.0.

2005-10-02  DindinX  <dindinx@gimp.org>
