@@ -1,3 +1,8 @@
+2005-10-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/help/domain.c: try to improve the error message that is
+	shown for missing help files.
+
 2005-10-05  Sven Neumann  <sven@gimp.org>
 
 	* app/dialogs/about-dialog.c: set application name to "GIMP", the
